Support FastThreadLocal mode. Resolves #94
1. Support FastThreadLocal mode when run with netty by config
   -Dttl.fastthreadlocal.enable=true, default is false
2. Caution: when FastThreadLocal mode is enabled,
   TransmittableThreadLocal can NEVER be inheritable.
3. Disable the tests which depends on the ability of InheritableThreadLocal
   when FastThreadLocal is enabled.

--- a/pom.xml
+++ b/pom.xml
@@ -95,6 +95,13 @@
 			<version>3.23.1-GA</version>
 			<optional>true</optional>
 		</dependency>
+		<dependency>
+			<groupId>io.netty</groupId>
+			<artifactId>netty-all</artifactId>
+			<version>4.0.20.Final</version>
+			<scope>provided</scope>
+			<optional>true</optional>
+		</dependency>
 		<!-- Testing frameworks and related dependencies -->
 		<dependency>
 			<groupId>junit</groupId>
